Dead players now slightly invisible; Fixed bug: if player leaves while on turn, the game does not progress

--- a/public/css/screens/gamescreen.css
+++ b/public/css/screens/gamescreen.css
@@ -12,6 +12,10 @@
     cursor: pointer;
 }
 
+.player-dead {
+    opacity: 0.5;
+}
+
 .game-player img {
     width: 7em;
 }
